--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  background: linear-gradient(0deg, darkslateblue, mediumslateblue, slateblue);
+  background: linear-gradient(slateblue 10%, darkslateblue);
   color: whitesmoke;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
